[project]
name = "teacher-lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "pillow>=12.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
